--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,7 @@
     </blockquote>
 	<div class="media">
 	  <a class="pull-left" href="#">
-	    <img class="media-object" src="/static/img/cat.png" alt="..." width="400" height="400">
+	    <img class="media-object" src="/static/img/livingroom1.JPG" alt="..." width="400" height="400">
 	  </a>
 	  <div class="media-body">
 	    <h2 class="headline text-center">About Me</h2>
