--- a/templates/faq.html
+++ b/templates/faq.html
@@ -14,7 +14,7 @@
     <br>
     <div class="media">
      <a class="pull-right" href="#">
-       <img class="media-object" src="/static/img/oktobercat.png" alt="..." height="400" width="400">
+       <img class="media-object" src="/static/img/bathroom3.JPG" alt="..." height="400" width="400">
      </a>
      <div class="media-body">
        <h2 class="headline">Frequently Asked Question</h2>
