--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="item active">
-          <img src="/static/img/floor.jpg"  alt="First slide">
+          <img src="/static/img/kitchen3.JPG"  alt="First slide" class="img-responsive">
           <!--<div class="slide1"></div>-->
           <div class="container">
             <div class="carousel-caption">
@@ -24,7 +24,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="/static/img/mall.jpg" alt="Second slide">
+          <img src="/static/img/kitchen4.JPG" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>I offer a variety of services and service areas!</h1>
@@ -37,7 +37,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="/static/img/closet.jpg" alt="Third slide">
+          <img src="/static/img/kitchen2.JPG" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Answers to common questions!.</h1>
