--- a/static/main.css
+++ b/static/main.css
@@ -31,6 +31,13 @@ body{
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
+  font-size: 20px;
+  font-weight: 900;
+  background-color: rgba( 0,0,0,0.4);
+  border-radius: 50px;
+  border: 2px solid;
+  margin: 5px;
+
 }
 
 /* Declare heights because of positioning of img element 
