--- a/templates/contact.html
+++ b/templates/contact.html
@@ -14,7 +14,7 @@
     </blockquote>
 
     <h2 class="headline text-center">Contact Me!</h2>
-    <form role="form">
+    <form role="form" method="post">
      <div class="form-group">
         <label for="myname">First and Last Name</label>
         <input type="text" class="form-control" id="myname" placeholder="First and Last Name">
@@ -25,11 +25,11 @@
 	  </div>
 	  <div class="form-group">
         <label for="myphone">Phone</label>
-        <input type="email" class="form-control" id="myphone" placeholder="Phone Number">
+        <input class="form-control" id="myphone" placeholder="Phone Number">
       </div>
 	  <div class="form-group">
         <label for="comments">Comments</label>
-	   <textarea class="form-control" rows="3" id="comments" placeholder="Enter comments here"></textarea>
+	   <textarea class="form-control" rows="3" id="comments" placeholder="Enter comments here...If you are looking for a quote please enter the square footage, number of bedrooms, bathrooms, type of floor, type of appliances, number of people and if there are any pets."></textarea>
 	  </div>
 	  <button type="submit" class="btn btn-default">Submit</button>
     </form>
