contact me form is now working

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,19 +17,19 @@
     <form role="form" method="post">
      <div class="form-group">
         <label for="myname">First and Last Name</label>
-        <input type="text" class="form-control" id="myname" placeholder="First and Last Name">
+        <input type="text" class="form-control" id="myname" name ="myname" placeholder="First and Last Name">
       </div>
 	  <div class="form-group">
 	    <label for="myemail">Email address</label>
-	    <input type="email" class="form-control" id="myemail" placeholder="Email">
+	    <input type="email" class="form-control" id="myemail" name="myemail" placeholder="Email" required>
 	  </div>
 	  <div class="form-group">
         <label for="myphone">Phone</label>
-        <input class="form-control" id="myphone" placeholder="Phone Number">
+        <input class="form-control" id="myphone" name="myphone" placeholder="Phone Number">
       </div>
 	  <div class="form-group">
         <label for="comments">Comments</label>
-	   <textarea class="form-control" rows="3" id="comments" placeholder="Enter comments here...If you are looking for a quote please enter the square footage, number of bedrooms, bathrooms, type of floor, type of appliances, number of people and if there are any pets."></textarea>
+	   <textarea class="form-control" rows="3" id="comments" name="comments" placeholder="Enter comments here...If you are looking for a quote please enter the square footage, number of bedrooms, bathrooms, type of floor, type of appliances, number of people and if there are any pets." required></textarea>
 	  </div>
 	  <button type="submit" class="btn btn-default">Submit</button>
     </form>
