--- a/templates/success.html
+++ b/templates/success.html
@@ -12,14 +12,8 @@
         If I have any issues, they are addressed immediately. I am very happy with Jen!!  
         <footer class="custom-footer">Kelli B, Macomb, Mi</footer>
     </blockquote>
-    {{myemail}}
-    <br>
-    {{mysend}}
-    <br>
-    {{myname}}
-    <br>
-    {{comments}}
-    <br>
+
+    <div class="alert alert-success" role="alert">Success!  Jen will get back to you as soon as possible!</div>
     
 </div>
 {% endblock %}
